# iterativeBY-cseng2020

./: .gitignore  LICENSE  README.md
.github/workflows/: build-verify.yml
docs/report/: analisi.tex  bib.bib  impl-ott.tex  intro.tex  main.tex  risultati.tex
docs/report/images/: mean.tex  memory.tex  tstat.tex
logs/by_timing/: 00_performanceLog_by_8d69162.csv  01_performanceLog_by_320e1c1.csv  02_performanceLog_by_10f2938.csv  02_performanceLog_by_937361f.csv  03_performanceLog_by_3cca94d.csv  04_performanceLog_by_39fa378.csv  05_performanceLog_by_ea305cd.csv  06_performanceLog_by_2a1fadf.csv  07_performanceLog_by_b4bfef7.csv  08_performanceLog_by_008bd57.csv
logs/full_timing/: 00_performanceLog_full_8d69162.csv  01_performanceLog_full_2029e24.csv
logs/specific/: mean.csv  tstat.csv
scripts/: build.sh  clean_build_files.sh  compareLogs.py  compute_by_results.sh  compute_full_results.sh  functional_testing.sh
scripts/djb_generator/: builder.py  codeBuilder.py  constants.py  generator.py  license.txt  primes.txt  treeUtils.py
scripts/plot/: mean.py  tstat.py
src/benchmarking/: CMakeLists.txt
src/benchmarking/include/: testing_facilities.h
src/common/include/: architecture_detect.h  rng.h  timing_and_stats.h
src/gf2x/include/: gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h
src/inverse/include/: inverse_Bru.h  inverse_DJB.h  inverse_DJB_facilities.h  inverse_DJB_specific.h  inverse_KTT.h  inverse_exp.h  inverse_powers_mod_p.h
